testsuite/tests/rename/should_fail/T9177.stderr

T9177.hs:4:13: error:
    Not in scope: type variable ‘int’
    Suggested fix:
      Perhaps use type constructor or class ‘Int’ (imported from Prelude)

T9177.hs:7:14: error:
    Not in scope: type variable ‘integerr’
    Suggested fix:
      Perhaps use type constructor or class ‘Integer’ (imported from Prelude)

T9177.hs:17:6: error: Not in scope: data constructor ‘Fun’
